GH-101: Prevent wrap "Log In" as Portal Nav slides
Prevent the "Log In" text from wrapping when the Portal Nav slides in.

--- a/taccsite_cms/static/site_cms/css/src/_imports/trumps/s-header.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/trumps/s-header.css
@@ -582,6 +582,10 @@ Styleguide Trumps.Scopes.Header
 
   /* To prevent expansion upon dropdown menu open */
   width: var(--portal-navlink-max-width);
+
+  /* To prevent "Log In" from wrapping as it slides into place */
+  /* NOTE: This affects username also, but it should not have any whitespace */
+  white-space: nowrap;
 }
 
 /* Nav Link: General: Desktop */
